--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ android:
     - platform-tools
     - tools
     - build-tools-26.1.1
+    - build-tools-28.0.3
     - android-22
     - android-28
     - sys-img-armeabi-v7a-android-22
@@ -19,4 +20,4 @@ before_script:
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
 
-script: ./gradlew connectedAndroidTest
+script: ./gradlew connectedAndroidTest --stacktrace --scan
