--- a/.travis.yml
+++ b/.travis.yml
@@ -19,5 +19,8 @@ before_script:
   - emulator -avd test -no-skin -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
+  
+ before_install:
+    -echo yes | sdkmanager --licenses
 
 script: ./gradlew connectedAndroidTest --stacktrace --scan
