--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,6 @@ before_script:
   - adb shell input keyevent 82 &
   
  before_install:
-    -yes | sdkmanager --licenses
+    -sdkmanager --licenses
 
 script: ./gradlew connectedAndroidTest --stacktrace --scan
