--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,15 @@ buildscript {
         jcenter()
 
     }
+    plugins {
+        id 'com.gradle.build-scan' version '1.16'
+    }
+
+    buildScan {
+        licenseAgreementUrl = 'https://gradle.com/terms-of-service'
+        licenseAgree = 'yes'
+        publishAlways()
+    }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.3.2'
         classpath 'com.google.gms:google-services:4.2.0'
