--- a/.travis.yml
+++ b/.travis.yml
@@ -21,4 +21,4 @@ before_script:
   - adb shell input keyevent 82 &
   
 
-script: ./gradlew connectedAndroidTest --stacktrace
+script: ./gradlew connectedAndroidTest
