--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,15 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     //RECYCLER VIEW
     implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+    implementation 'com.squareup.okhttp3:okhttp:3.10.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.7.0'
+
+    //paytm
+    implementation('com.paytm:pgplussdk:1.3.1') {
+        transitive = true;
+    }
 
 }
 
