--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     implementation 'com.google.gms:google-services:4.2.0'
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'com.android.support:design:28.0.0'
     testImplementation 'junit:junit:4.12'
     testImplementation 'android.arch.core:core-testing:1.0.0-alpha3'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
@@ -34,6 +35,8 @@ dependencies {
     androidTestImplementation 'androidx.test:rules:1.1.1'
     implementation 'com.google.firebase:firebase-core:16.0.8'
     implementation 'com.google.firebase:firebase-auth:16.2.0'
+    //firbase database
+    implementation 'com.google.firebase:firebase-database:16.1.0'
     //CARD VIEW
     implementation 'com.android.support:cardview-v7:28.0.0'
     // GLIDE
