--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         <activity android:name=".SignUpActivity"></activity>
         <activity android:name=".LoginPageStudent" />
         <activity android:name=".LoginPageChapter" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".student_login_success">
             <!--<intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -33,6 +33,9 @@
         </activity>
         <activity android:name=".Login" />
         <activity android:name=".Events_list_student.Event_Description" />
+        <activity android:name=".chapter_login_success" />
+        <activity android:name=".EventRegister" />
+        <activity android:name=".SignUpChapterActivity" />
 
     </application>
 
